fix extra padding attempt

--- a/style.css
+++ b/style.css
@@ -577,7 +577,7 @@ footer h6 {
     }
 
     #banquets, #alarcarte, #lunchSpecial, #kidsMeal {
-        padding: 0 10px;
+        padding: 0 15px;
     }
 
     .fa-phone {
@@ -650,6 +650,10 @@ footer h6 {
         max-width: 360px;
         left: 10px;
     }
+
+    .menu-box ul {
+        padding-right: 80px;
+    }
 }
 
 @media screen and (max-width: 375px) {
@@ -661,5 +665,9 @@ footer h6 {
         margin-top: 360px;
         max-width: 340px;
         left: 10px;
+    }
+    
+    .menu-price {
+        font-size: 18px;
     }
 }
